2014-10-05  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (syms_of_nsterm): ns-use-fullscreen-animation is new.
	(toggleFullScreen:): Use ns-use-fullscreen-animation for animate.
	(ns_select, ns_read_socket): Use unwind_protect to decrease
	apploopnr (Bug#18345).

	* macfont.m: Fix indentation and import changes from macport
	24.3.94.
	(macfont_closest_traits_index): New function.
	(macfont_closest_traits_index_p): Renamed from
	macfont_closest_traits_index.
	(macfont_list): Use macfont_closest_traits_index_p.

2014-10-05  K. Handa  <handa@gnu.org>

	* coding.c (detect_coding_iso_2022): Set coding->rejected
	correctly when an invalid escape sequence is found (Bug#18610).

2014-10-04  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (create_menus): Only add tearoffs to empty menus.
	(xg_update_submenu): Remove has_tearoff_p, pass 1 to create_menus
	for add_tearoff_p.

2014-10-04  Martin Rudalics  <rudalics@gmx.at>

	* buffer.c (scroll_bar_width, scroll_bar_height): Fix
	doc-strings.
	* window.c (Fset_window_scroll_bars): Fix doc-string.
	(Fwindow_scroll_bars): Have it return what the doc-string says.

2014-10-03  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_by_lines): Call reseat_1 after moving the
	iterator backwards, to resync the bidi iterator.  (Bug#18584)

2014-10-03  Dmitry Antipov  <dmantipov@yandex.ru>

	Consistently use min and max macros from lisp.h.
	* coding.c (min, max):
	* font.c (MAX):
	* unexhp9k800.c (min):
	* unexw32.c (min, max): Use definitions from lisp.h.
	* regex.c (MAX, MIN) [!emacs]: Define own max and min as such.
	Adjust users.
	* gmalloc.c (min): Tiny style change.

	* fileio.c (emacs_readlinkat, Finsert_file_contents):
	* w32fns.c, xfns.c (x_create_tip_frame): Use AUTO_STRING.

2014-10-03  Paul Eggert  <eggert@cs.ucla.edu>

	Fix x-focus-frame bug with "Not an in-range integer" (Bug#18586).
	* xselect.c (X_SHRT_MAX, X_SHRT_MIN, X_LONG_MAX, X_LONG_MIN)
	(X_ULONG_MAX): Move these macros to xterm.h.